# echopype

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  EK60.py  MANIFEST.in  README.md  README.rst  README.txt  add_location_duplicated_timestamps_warning.ipynb  add_location_nan_zero_warnings.ipynb  base_def.py  data_transforms.py  date_conversion.py  db_diff.py  decomp_plot.py  echopype_converter.py  echopype_model.py  echopype_notes.md  echopype_view.py  echosounder_model.py  environment.yml  gsoc_contrib_guide.md  nmea_data.py  parsers.py  plot_hake_10days.py  plot_hake_daily.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar_data_format.md  survey_hake.py  test.ipynb  (+12 more)
.ci_helpers/: check-version.py  py3.10.yaml  py3.11.yaml  py3.12.yaml  py3.13.yaml  py3.7.yaml  py3.8.yaml  py3.9.yaml  run-test.py  setup-services-windows.py  user_environment.yml
.ci_helpers/docker/: docker-compose.yaml  download.sh  http-ep.dockerfile  http.dockerfile  minio.dockerfile  minioci.dockerfile  setup-services.py
.ci_helpers/memory_usage/: build_memory_summary.py  monitor_memory_linux.sh  monitor_memory_windows.ps1
.github/ISSUE_TEMPLATE/: conversion_error.md  conversion_error.yml  gsoc24.md  gsoc24.yml  my-files-don-t-convert.md
.github/workflows/: build.yaml  ci.yaml  docker.yaml  ep-install.yaml  lint.yaml  packit.yaml  pr.yaml  pypi.yaml  test-data.yaml  windows-utils.yaml  windows.yaml
data_solar_radiation/: eao_buoy_solar_radiation_20170831download.txt
doc/source/: index.rst
docs/: Makefile  echodata_html_repr.html  echodata_html_repr.ipynb  requirements.txt  rtd-requirements.txt
docs/source/: _config.yml  _toc.yml  ad2cp_reorg.md  api.rst  conf.py  contrib.md  contrib_howto.md  contrib_roadmap.md  contrib_setup.md  contrib_start.md  contrib_type.md  contributing.md  contributing.rst  convert.md  convert.rst  data-format-5to6.ipynb  data-format-changes.ipynb  data-format-processed.ipynb  data-format-raw.ipynb  data-format-sonarnetcdf4.ipynb  data-format.ipynb  data-format.md  data-format.rst  data-proc-additional.ipynb  data-proc-func.ipynb  data-proc.ipynb  data-proc.md  echopype.rst  examples.rst  index.md  index.rst  installation.md  installation.rst  open-converted.ipynb  open-converted.rst  plotting.rst  process.rst  processing-levels.md  references.bib  resources.rst  (+8 more)
echopy/processing/: mask_impulse.py  mask_transient.py
echopy/reading/: read_calibration.py
echopy/utils/: transform.py
echopype/: __init__.py  _version.py  core.py  data_converter.py  echopype.py  ek60.py  sonar_converter  testing.py  unpack_ek60.py  unpack_ek80.py  version.py
echopype/analysis/: __init__.py
echopype/calibrate/: __init__.py  api.py  cal_func.py  cal_params.py  calibrate.py  calibrate_azfp.py  calibrate_base.py  calibrate_ek.py  calibrate_func.py  ecs.py  ecs_parser.py  ek80_complex.py  ek80_utils.py  env_params.py  env_params_new.py  env_params_old.py  range.py
echopype/clean/: __init__.py  api.py  background_noise_est.py  impulse_noise.py  signal_attenuation.py  transient_noise.py  utils.py
echopype/colormap/: __init__.py  cm.py
echopype/commongrid/: __init__.py  api.py  mvbs.py  nasc.py  regrid.py  utils.py
echopype/consolidate/: __init__.py  api.py  ek_depth_utils.py  loc_utils.py  split_beam_angle.py
echopype/conversion/: __init__.py  convert.py  parse_base.py
echopype/convert/: __init__.py  ad2cp_fields.yaml  adcp.py  add_ancillary.py  api.py  azfp.py  azfp_set_groups.py  convert.py  convert_combine.py  convert_ui.py  convertbase.py  convertbase_new.py  echopype_converter  ek60.py  ek60_date_conversion.py  ek60_raw_io.py  ek60_raw_parsers.py  ek60_set_groups.py  ek80.py  nmea_data.py  ocean_metrics.py  parse_ad2cp.py  parse_azfp.py  parse_azfp6.py  parse_base.py  parse_bi500.py  parse_ek60.py  parse_ek80.py  parse_uls5.py  parse_uls6.py  parsed_to_zarr.py  parsed_to_zarr_ek60.py  parsed_to_zarr_ek80.py  set_groups.py  set_groups_ad2cp.py  set_groups_adcp.py  set_groups_azfp.py  set_groups_azfp6.py  set_groups_base.py  set_groups_ek60.py  (+4 more)
echopype/data/: 17082117.01A  azfp_test.nc
echopype/echodata/: __init__.py  api.py  combine.py  combine_lazily.py  combine_lazily_v2.py  combine_preprocess.py  echodata.py  open_file.py  simrad.py  utils_platform.py  (+1 more)
firstAzfpUnpack/: 18030100.01A  azfpUnpack.py  testAzfpUnpack.py
misc/: echopype_notes.md  old_readme_after_ohw.md
notebooks/: 01_netcdf_example_adcp.ipynb  AZFP parse_test1-marian_unfinished (2).ipynb  AZFP parse_test1-marian_unfinished.ipynb  EK60 metadata.ipynb  EK60_demo_OOI.ipynb  OOI_demo.ipynb  Untitled.ipynb  azfp_demo.ipynb  azfp_mvbs_demo.ipynb  develop_class_EchoDataRaw.ipynb  develop_raw2hdf5.ipynb  develop_raw2hdf5_concat.ipynb  develop_raw2hdf5_cont.ipynb  develop_raw2hdf5_initiate_cont.ipynb  ek60_metadata.ipynb  environment.yml  netcdf_data_requests.ipynb  new plot test.ipynb  old_unpack_ek60_python3_code.ipynb  parse_ek60_raw_unpacking_and_convert_to_python3.ipynb  save_nc_test.html  save_nc_test.ipynb  save_nc_test.py  test_reading_example_nc_file_from_gavin.html  test_reading_example_nc_file_from_gavin.ipynb  test_reading_example_nc_file_from_gavin.py  test_unpack_ek60_python3_code.ipynb  zpls_data_example.ipynb  zplsc_data_processing_example.ipynb
pynmea2/: README.md  nmea_utils.py
pynmea2-master/: .travis.yml  Makefile  Thumbs.db
random_files/: 01_netcdf_example_adcp.html  01_netcdf_example_adcp.py  azfpMarian.py  learning_pandas_data_structure.ipynb  learning_pandas_functionality.ipynb  netcdf_data_requests.html  netcdf_data_requests.py  test.nc  test2.nc  test3.nc
ref_code/: concat_raw.py  echopype_model.py  echopype_view.py  runAzfpMarian.py  testAzfpUnpack.py  zplsc_echogram.py
scripts/: run_pr_checks.sh
tests/: constants.py  ek60_test.py  example_mask_transient.py  masking_impulse_noise.py  trivial_test.py
to_be_moved/: echopype_converter.py  echopype_model.py
util/: NMEAData.py  nmea_data.py  nmea_data_rht.py  parsers.py  raw_file.py  unit_conversion.py
(+409 files in other folders)
