[metadata]
name = echopype
maintainer = Wu-Jung Lee
maintainer_email = leewujung@gmail.com
description = Enhancing the interoperability and scalability in analyzing ocean sonar data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echopype
license = Apache License, Version 2.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
author = Wu-Jung Lee
author_email = leewujung@gmail.com
platforms = OS Independent

[options]
packages = find:
platforms = any
py_modules =
    _echopype_version
include_package_data = True
install_requires =
  dask[array]
  netCDF4
  pynmea2
  pytz
  scipy
  xarray
  zarr
  fsspec
  s3fs
python_requires = >=3.8

[options.extras_require]
dev =
    black
    check-manifest
    codespell
    docker-compose
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    setuptools_scm
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
    sphinxcontrib-mermaid
    twine
    wheel
plot =
    matplotlib
    cmocean
docs =
    sphinx_rtd_theme
    sphinx-automodapi
    sphinxcontrib-mermaid
    jupyter-book
    numpydoc
    docutils<0.18
all =
    %(dev)s
    %(plot)s
    %(docs)s

[black]
line-length = 100

[flake8]
max-line-length = 100
output-file = flake8_log.txt
tee = True
ignore = E722,E203,W503,T001

[isort]
known_first_party = echopype
known_third_party = _echopype_version,setuptools
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 100
