[metadata]
name = echopype
maintainer = Wu-Jung Lee
maintainer_email = leewujung@gmail.com
description = Enhancing the interoperability and scalability in analyzing ocean sonar data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echopype
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
author = Wu-Jung Lee
author_email = leewujung@gmail.com
platforms = OS Independent

[options]
packages = find:
platforms = any
py_modules =
    _echopype_version
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools_scm

[options.extras_require]
plot =
    matplotlib>=3.7
    cmocean
